--- a/template.qmd
+++ b/template.qmd
@@ -78,6 +78,9 @@ plot(
         xticks=n_levels,
     )
     hline!([0])
+
+return NPV_level
+
 ```
 
 ## Adaptive Case
@@ -85,7 +88,9 @@ plot(
 Now we can attempt to implement the strategies deiscussed in Neufville's paper to examine the effects of flexibility in decision making. This adaptive policy analysis considers a sort of feedback loop rather than only making one elevation at year 1. Now for every year, the demand is compared to the capacity. If the demand exceeds capacity an addition level will be added, if not then there is no change. 
 ```{julia}
 NPV_levelA = []
+pol = []
 
+year = [1.0,2.0,3.0,4.0,5.0,6.0,7.0,8.0,9.0,10.0,11.0,12.0,13.0,14.0,15.0,16.0,17.0,18.0,19.0,20.0,21.0,22.0,23.0,24.0,25.0,26.0,27.0,28.0,29.0,30.0,31.0,32.0,33.0,34.0,35.0,36.0,37.0,38.0,39.0,40.0,41.0,42.0,43.0,44.0,45.0,46.0,47.0,48.0,49.0,50.0]
 # initial number of levels
 n_levels_init = 2
 for j in 1:length(sow_ens)  
@@ -94,13 +99,16 @@ for j in 1:length(sow_ens)
     # run the adaptive policy wit pur initial elevation
     policiesA = AdaptivePolicy(n_levels_init)
     # run the simulation for the sow with this adaptive policy
-    profitsA = simulate(sow, policiesA)
+    profitsA = [simulate(sow, policiesA) for i in 1:length(year)]
     profits_avgA = mean.(profitsA)
-    push!(NPV_levelA, profits_avgA)
+    push!(NPV_levelA, profitsA)
+    push!(pol, profitsA)
 end
 
+return NPV_levelA
+
 #plot(
-        #n_levelsA,
+        #n_levels,
         #NPV_levelA;
         #ylabel="NPV Profits [Million USD]",
         #xlabel="Number of levels",
